--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "johnny-five": "latest"
     },
     "scripts": {
-        "postinstall": "bower install"
+        "postinstall": "bower install",
+
+        "prestart": "npm install",
+        "start": "node index.js"
     }
 }
