--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-filter": "~0.5.4",
     "highcharts-ng": "~0.0.8",
     "highcharts": "~4.1.3",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "socket.io.client": "latest"
   }
 }
