--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "node-arduino",
+  "name": "arduino-dashboard",
   "version": "0.0.1",
   "description": "arduino",
+  "main": "main.js",
   "dependencies": {
     "babel-cli": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
@@ -15,9 +16,15 @@
     "postinstall": "node node_modules/bower/bin/bower install",
     "start": "node dist/index.js",
     "build": "node node_modules/babel-cli/bin/babel src --out-dir dist --source-maps",
-    "build-watch": "node node_modules/babel-cli/bin/babel src --out-dir dist --source-maps -w"
+    "build-watch": "node node_modules/babel-cli/bin/babel src --out-dir dist --source-maps -w",
+    "electron": "electron main.js"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
+  },
+  "devDependencies": {
+    "electron-prebuilt": "^0.36.4"
   }
 }
